Bug 1888790 - Fix nsParseNewMailState to ignore "From " lines in message body. r=mkmelin

There was leftover code in nsParseNewMailState from the everything-is-an-mbox days.
This meant messages lines beginning with "From " in the body would flip it back out
into header-parsing mode, causing database fields to be filled with rubbish.
This particularly affected POP3 mail. IMAP uses a different class for header parsing.

Differential Revision: https://phabricator.services.mozilla.com/D210737

--HG--
extra : rebase_source : 202b7134495c2ecfe23eff90f0a2c651d3e63087